gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail17927.d
version https://git-lfs.github.com/spec/v1
oid sha256:5e1cbd2f440aa33197550fc6bae5fc36a3b4c3c51c7ba3ee019c0d1b5d4ab7e4
size 782
